# alphagenome_ft

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  t paths explicitly if you want smaller commits
.github/workflows/: publish.yml  tests.yml
alphagenome_ft/: __init__.py  custom_forward.py  custom_heads.py  custom_model.py  embeddings_extended.py  lora.py  optimizer_utils.py  parameter_utils.py  templates.py
alphagenome_ft/finetune/: __init__.py  config.py  data.py  train.py
data/: targets_rna_demo.yaml
docs/: attribution.md  encoder_only_perturbation.md  finetune_full_model.md  finetune_head_only.md  frozen_backbone_new_head.md  full_model_finetuning.md  heads_only_optimizer.md  lora_adapters.md
notebooks/: colab_encoder_only_mpra_finetune.ipynb  finetune_atac_lora.ipynb  finetune_encoder_only_mpra.ipynb  finetune_rna_head_only.ipynb  finetune_rna_lora.ipynb
scripts/: convert_bed.py  finetune_demo.py  targets_demo.yaml
tests/: README.md  __init__.py  conftest.py  kaggle_util.py  test_checkpoint.py  test_custom_heads.py  test_encoder_only_mode.py  test_model_predictions.py  test_optimizer_masking.py  test_parameter_management.py
