[project]
name = "alphagenome-ft"
version = "0.1.0"
description = "Finetuning utilities for AlphaGenome with custom heads and parameter freezing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Alan Murphy", email = "your.email@example.com"}
]
keywords = ["alphagenome", "genomics", "deep-learning", "finetuning", "jax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Note: Users should have these installed via alphagenome_research
    # We keep these as informational but don't enforce versions
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/alphagenome_ft"
Repository = "https://github.com/yourusername/alphagenome_ft"
Issues = "https://github.com/yourusername/alphagenome_ft/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["alphagenome_ft*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py310"

